# TextureSynthesis

./: CMakeLists.txt  LICENSE  README.md
dependencies/opencvlib/lib/: libopencv_calib3d.so.4.5.5  libopencv_features2d.so.4.5.5  libopencv_flann.so.4.5.5  libopencv_highgui.so.4.5.5  libopencv_imgcodecs.so.4.5.5  libopencv_ml.so.4.5.5  libopencv_objdetect.so.4.5.5  libopencv_photo.so.4.5.5  libopencv_stitching.so.4.5.5  libopencv_video.so.4.5.5  libopencv_videoio.so.4.5.5
imgs/Reference/Bark/: Bark.0000.ppm  Bark.0001.ppm  Bark.0002.ppm  Bark.0003.ppm  Bark.0004.ppm  Bark.0005.ppm  Bark.0006.ppm  Bark.0007.ppm  Bark.0008.ppm  Bark.0009.ppm  Bark.0010.ppm  Bark.0011.ppm  Bark.0012.ppm
imgs/Reference/Brick/: Brick.0000.ppm  Brick.0001.ppm  Brick.0002.ppm  Brick.0003.ppm  Brick.0004.ppm  Brick.0005.ppm  Brick.0006.ppm  Brick.0007.ppm  Brick.0008.ppm
imgs/Reference/Buildings/: Buildings.0000.ppm  Buildings.0001.ppm  Buildings.0002.ppm  Buildings.0003.ppm  Buildings.0004.ppm  Buildings.0005.ppm  Buildings.0006.ppm  Buildings.0007.ppm  Buildings.0008.ppm  Buildings.0009.ppm  Buildings.0010.ppm
imgs/Reference/Clouds/: Clouds.0000.ppm  Clouds.0001.ppm
imgs/Reference/Fabric/: Fabric.0000.ppm  Fabric.0001.ppm  Fabric.0002.ppm  Fabric.0003.ppm  Fabric.0004.ppm  Fabric.0005.ppm  Fabric.0006.ppm  Fabric.0007.ppm  Fabric.0008.ppm  Fabric.0009.ppm  Fabric.0010.ppm  Fabric.0011.ppm  Fabric.0012.ppm  Fabric.0013.ppm  Fabric.0014.ppm  Fabric.0015.ppm  Fabric.0016.ppm  Fabric.0017.ppm  Fabric.0018.ppm  Fabric.0019.ppm
imgs/Reference/Flowers/: Flowers.0000.ppm  Flowers.0001.ppm  Flowers.0002.ppm  Flowers.0003.ppm  Flowers.0004.ppm  Flowers.0005.ppm  Flowers.0006.ppm  Flowers.0007.ppm
imgs/Reference/Food/: Food.0000.ppm  Food.0001.ppm  Food.0002.ppm  Food.0003.ppm  Food.0004.ppm  Food.0005.ppm  Food.0006.ppm  (+5 more)
src/: GaussianPyramid.cpp  GaussianPyramid.h  KDTree.cpp  a.out  comparison1.txt  comparison2.txt  kdtree.cpp  kdtree.h  main.cpp
(+423 files in other folders)
